# Q4_25_Accelerated_ningthoujamSwamikumar

./: README.md
escrow-litesvm/: .gitignore
escrow-litesvm/programs/anchor-escrow/src/: lib.rs
magicblock/: Anchor.toml  package.json  pnpm-lock.yaml
magicblock/programs/counter/: Cargo.toml
magicblock/programs/dice-roll/: Cargo.toml
magicblock/programs/magicblock/: Cargo.toml
magicblock/tests/: counter.ts  dice-roll.ts  er-state-account.ts  magicblock.ts
pinocchio/pinocchio-escrow/: .gitignore
pinocchio/pinocchio-escrow/src/: lib.rs
pinocchio/pinocchio-fundraiser/: .gitignore  Cargo.toml
pinocchio/pinocchio-fundraiser/src/: error.rs  lib.rs
pinocchio/pinocchio-fundraiser/src/instructions/: check_contributions.rs  contribute.rs  initialize.rs  mod.rs  refund.rs
pinocchio/pinocchio-fundraiser/src/state/: contributor.rs  fundraiser.rs  mod.rs
pinocchio/pinocchio-fundraiser/src/tests/: check_contributions.rs  contribute.rs  init.rs  mod.rs  refund.rs
week1-challenge/: .gitignore  Anchor.toml
week1-challenge/programs/transfer-hook/: Cargo.toml
week1-challenge/programs/transfer-hook/src/: lib.rs  state.rs
week1-challenge/programs/transfer-hook/src/instructions/: add_to_whitelist.rs  init_extra_account_metas.rs  init_mint.rs  init_whitelist.rs  mod.rs  remove_from_whitelist.rs  transfer_hook.rs
week1-challenge/programs/transfer-hook/src/tests/: mod.rs
week1-challenge/programs/week1-challenge/: Cargo.toml
week1-challenge/tests/: week1-challenge.ts
whitelist-transfer-hook/tests/: whitelist-transfer-hook.ts
(+33 files in other folders)
