[package]
name = "pinocchio-fundraiser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "0.9.2"
pinocchio-associated-token-account = "0.2.0"
pinocchio-log = "0.5.1"
pinocchio-pubkey = { git = "https://github.com/anza-xyz/pinocchio.git", version = "0.3.0" }
pinocchio-system = "0.3.0"
pinocchio-token = "0.4.0"

[dev-dependencies]
litesvm = "0.8.1"
litesvm-token = "0.8.1"
solana-sdk = "3.0.0"
