[package]
name = "transfer-hook"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["interface-instructions"] }
anchor-spl = "0.31.1"
spl-discriminator = "0.4"
spl-tlv-account-resolution = "0.10.0"
spl-transfer-hook-interface = "0.10.0"

[dev-dependencies]
litesvm = "0.8.1"
litesvm-token = "0.8.1"
solana-sdk = "3.0.0"

